2009-10-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Prepare for ABI change.
	
	* tools/bin/cce.in: Change the base offset for MT linking to 16Mb,
	to allow for some reserved memory with special behavior before.

2009-10-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Ease post-processing of the output of `slr'.
	
	* tools/bin/sag (SlrVarGenerator.dogen): Prefix `#' to warning
	messages so they can be treated as comments in text-processing
	tools.

2009-10-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in MT-alpha code generation.

	When the legacy RA register is used as a temporary, a special
	"complete memory load" register access is emitted before the point
	a thread terminates, to ensure pending memory loads are flushed
	before the thread resources are used. This is a "required
	optimization" (to avoid pipeline stalls in the next thread that
	reuses the register). Unfortunately it is possible that the
	control flow reaches that point without using the RA register (it
	could be used only in some branches in the function body). The
	solution implemented is to conservatively initialize RA always
	when it may be used as a temporary.
	
	* tools/bin/spp (pppalpha.makeprotectspecial): New transform.
	(pppalpha.filter): Use it.

2009-10-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Provide support for anonymous thread arguments/parameters.
	
	* tools/include/slc.m4: Define new macro `sl_anonymous'.
	
	* tools/lib/t-ptl/slimpl.m4,
	* tools/lib/t-seqc/slimpl.m4,
	* tools/lib/t-utc0/slimpl.m4	
	* tools/lib/t-pppalpha/slimpl.m4: Use `sl_anonymous' when no
	thread parameter/argument name is provided.

2009-10-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix some issues with whitespace handling.
	
	* tools/include/m4sugar_regexp.patch: New.
	
	* tools/Makefile.am: Patch regexps after translating the quotes in
	m4sugar, since some regexps can contain valid single pairs of [
	and ].

	* tools/lib/t-seqc/slimpl.m4: Do not initialize thread arguments