@@ -52,8 +52,8 @@ m4_define([[sl_index]], [[index long [[$1]];m4_dnl
 __asm__ __volatile__("#MTREG_SET: $l0")]])
 
 # Pull shared and global argument declarations.
-m4_define([[sl_sharg]],[[[[$1]]:__a_[[]]m4_if([[$2]],,sl_anonymous,[[$2]]):m4_if([[$3]],,[[= *([[$1]]*)(void*)-sizeof([[$1]])]],[[= [[$3]]]])]])
-m4_define([[sl_glarg]],[[[[$1]] const:__a_[[]]m4_if([[$2]],,sl_anonymous,[[$2]]):m4_if([[$3]],,[[= *([[$1]]*)(void*)-sizeof([[$1]])]],[[= [[$3]]]])]])
+m4_define([[sl_sharg]],[[[[$1]]:__a_[[]]m4_if([[$2]],,sl_anonymous,[[$2]]):m4_if([[$3]],,[[= *([[$1]]*)(void*)4]],[[= [[$3]]]])]])
+m4_define([[sl_glarg]],[[[[$1]] const:__a_[[]]m4_if([[$2]],,sl_anonymous,[[$2]]):m4_if([[$3]],,[[= *([[$1]]*)(void*)4]],[[= [[$3]]]])]])
 m4_copy([[sl_sharg]],[[sl_shfarg]])
 m4_copy([[sl_glarg]],[[sl_glfarg]])
 
